formulario del pedido funcionando

--- a/casaConectada/web/carrito.html
+++ b/casaConectada/web/carrito.html
@@ -27,9 +27,9 @@
                 <img src="../img/icons/shopping-cart.png" alt="carrito" height="15px" title="Carrito">
                 <span id="badge" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
                 <span class="visually-hidden">Productos en el carrito</span> 
-              </span>
-          </a>
-          <a href="./web/login.html"><img src="../img/icons/padlock.png" alt="login" height="15px" title="Login"></a>
+                </span>
+                </a>
+                <a href="./web/login.html"><img src="../img/icons/padlock.png" alt="login" height="15px" title="Login"></a>
               </div>
               </div>
             </div>
@@ -61,7 +61,7 @@
                       </tfoot>
                     </table>
                   </div>
-                    <button class="btn btn-outline-dark m-2">Pagar</button>
+                    <a class="btn btn-outline-dark m-2" href="./checkout.html" role="button">Pagar</a>
                     <button class="btn btn-outline-danger m-2" id="vaciarCarrito">Vaciar carrito</button>
                 </div>
             </div>
