--- a/casaConectada/web/carrito.html
+++ b/casaConectada/web/carrito.html
@@ -42,11 +42,12 @@
           </header>
         <main>
             <div id="compra">
-                <h2>Carrito de compra</h2>
                 
-                 <div class="container table-responsive">
-                   <div class="row">   
-                    <table class="tablaCarrito table table-hover table-striped table-bordered border-secondary">
+                
+                 <div class="container ">
+                  <div class="row"><h2>Carrito de compra</h2></div> 
+                  <div class="row">   
+                    <table class="table-responsive tablaCarrito table table-hover table-striped table-bordered border-secondary">
                       <thead><th>Foto</th><th>Nombre</th><th>Cantidad</th><th>Precio</th><th>Subtotal</th></thead>
                       <tbody></tbody>
                       <tfoot>
