se inserta en la bbdd los datos de direccion del pedido

--- a/casaConectada/web/checkout.html
+++ b/casaConectada/web/checkout.html
@@ -98,7 +98,8 @@
                   </div>
                   <div class="col-md-5">
                     <label for="provincia">Provincia </label>
-                      <select id="provincia" class="form-select form-select-sm" aria-label=".form-select-sm example">
+                    <!-- <input type="text" id="provincia">   -->
+                    <select id="provincia" class="form-select form-select-sm" aria-label=".form-select-sm example">
                         
                         <option selected value="01">Álava</option>
                           <option value="02">Albacete</option>
