--- a/casaConectada/web/checkout.html
+++ b/casaConectada/web/checkout.html
@@ -10,7 +10,6 @@
         <link rel="stylesheet" href="../css/bootstrap.min.css">
         <link rel="stylesheet" href="../css/styles.css"/>
         <meta charset="UTF-8"/>
-        <!-- <script type="text/javascript" src="../scripts/login.js"></script> -->
         <script type="text/javascript" src="../scripts/carrito.js"></script>
         <script type="text/javascript" src="../scripts/badge.js"></script>
         <script type="text/javascript" src="../scripts/checkout.js"></script>
@@ -20,8 +19,8 @@
         <header>
             <div class="logo">
               <div class="container-fluid">
-              <a href="./index.html"><img src="../img/logoimagen.png" class="logo" height="50px"></a>
-              <a href="./index.html"><img src="../img/logoTexto.png" alt="Casa Conectada" height="25px" class="casa"></a>
+              <a href="../index.html"><img src="../img/logoimagen.png" class="logo" height="50px"></a>
+              <a href="../index.html"><img src="../img/logoTexto.png" alt="Casa Conectada" height="25px" class="casa"></a>
               <div class="login">
                 <!-- Aqui se inserta el badge de bootstrap para que avise de los productos que estan metidos en el carrito con el localStorage -->
                 <a class="position-relative d-inline-block mx-4" href="./carrito.html">
@@ -30,7 +29,7 @@
                   <span class="visually-hidden">Productos en el carrito</span> 
                   </span>
                   </a>
-                  <a href="./web/login.html"><img src="../img/icons/padlock.png" alt="login" height="15px" title="Login"></a>
+                  <a href="./login.html"><img src="../img/icons/padlock.png" alt="login" height="15px" title="Login"></a>
               </div>
               </div>
             </div>
