se corrige carrito, ahora solo se puede ir al pedido si hay productos en el carrito

--- a/casaConectada/web/carrito.html
+++ b/casaConectada/web/carrito.html
@@ -23,7 +23,7 @@
               <a href="../index.html"><img src="../img/logoTexto.png" alt="Casa Conectada" height="25px" class="casa"></a>
               <div class="login">
                 <!-- Aqui se inserta el badge de bootstrap para que avise de los productos que estan metidos en el carrito con el localStorage -->
-                <a class="position-relative d-inline-block mx-4" href="./web/carrito.html">
+                <a class="position-relative d-inline-block mx-4" href="./carrito.html">
                 <img src="../img/icons/shopping-cart.png" alt="carrito" height="15px" title="Carrito">
                 <span id="badge" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
                 <span class="visually-hidden">Productos en el carrito</span> 
@@ -62,7 +62,7 @@
                       </tfoot>
                     </table>
                   </div>
-                    <a class="btn btn-outline-dark m-2" href="./checkout.html" role="button">Pagar</a>
+                    <a class="btn btn-outline-dark m-2" id="pagar" role="button">Pagar</a>
                     <button class="btn btn-outline-danger m-2" id="vaciarCarrito">Vaciar carrito</button>
                 </div>
             </div>
