--- a/casaConectada/web/login.html
+++ b/casaConectada/web/login.html
@@ -7,6 +7,7 @@
         <title>Casa Conectada Domotica</title>
         <script src="../scripts/jquery-3.6.0.js"></script>
         <script src="../scripts/bootstrap.bundle.min.js"></script>
+        <script src="../scripts/login.js"></script>
         <link rel="stylesheet" href="../css/bootstrap.min.css">
         <link rel="stylesheet" href="../css/styles.css" />
         <meta charset="UTF-8" />
@@ -48,8 +49,8 @@
               </div> -->
               <input id="iniciar" type="submit" class="btn btn-primary" value="Iniciar Sesion">
               <br><br>
-              <div id="errorusuario"><p>El usuario no existe</p></div>
-              <div id="noerror"><p>El usuario existe</p></div>
+              <div id="errorusuario"><p></p></div>
+              <div id="noerror"><p></p></div>
             </form>
             
             </div>
