correcciones en admin, elimino badge en header de paginas que no corresponden

--- a/casaConectada/web/seccionProductos.html
+++ b/casaConectada/web/seccionProductos.html
@@ -16,7 +16,7 @@
   <body>
     <header>
       <div class="logo">
-        <div class="container-fluid">
+        <div class="container">
         <a href="../index.html"><img src="../img/logoimagen.png" class="logo" height="50px"></a>
         <a href="../index.html"><img src="../img/logoTexto.png" alt="Casa Conectada" height="25px" class="casa"></a>
         <div class="login">
