--- a/casaConectada/web/producto.html
+++ b/casaConectada/web/producto.html
@@ -18,9 +18,9 @@
     
     <header>
       <div class="logo">
-        <div class="container-fluid">
+        <div class="container">
           <a href="../index.html"><img src="../img/logoimagen.png" class="logo" height="50px"></a>
-          <a href="./index.html"><img src="../img/logoTexto.png" alt="Casa Conectada" height="25px" class="casa"></a>
+          <a href="../index.html"><img src="../img/logoTexto.png" alt="Casa Conectada" height="25px" class="casa"></a>
           <div class="login">
             <!-- Aqui se inserta el badge de bootstrap para que avise de los productos que estan metidos en el carrito con el localStorage -->
             <a class="position-relative d-inline-block mx-4" href="./carrito.html">
