se corrige el numero de provincia por el nombre, se corrige el la tarjeta de producto incluyendo precio, se corrige los botones de filtro para que sean responsive, se borra añadir del pedido

--- a/casaConectada/web/seccionProductos.html
+++ b/casaConectada/web/seccionProductos.html
@@ -40,7 +40,7 @@
     </header>
 <main> 
   <!-- pintar los botones de forma dinámica -->
-  <div class="filtros">
+  <div class="filtros container">
 
   </div>
   <div id="seccionProductos" class="d-flex flex-wrap justify-content-around m-3"></div><!-- aqui es donde se van metiendo los productos mediante javaScript // añado clases de bootstrap-->
