--- a/casaConectada/web/laTienda.html
+++ b/casaConectada/web/laTienda.html
@@ -47,7 +47,7 @@
             <div class="col-10 clearfix">
               <h1>La Tienda</h1>
             
-              <img class="fotoPro col-md-6 float-md-end mb-3 ms-md-3" src="../img/1.png" alt="">
+              <img class="fotoPro col-md-6 float-md-end mb-3 ms-md-3" src="../img/1.png" alt="" style="max-width: 100%;">
               <p>Casa Conectada es una tienda online de dispositivos inteligentes principalmente inalámbricos y enfocados en conseguir un catálogo que sea de bajo coste. 
               Es una iniciativa por parte de un grupo de personas aficionados a la domótica y que quiere transmitir  soluciones sencillas para actualizar los hogares de hoy en día. <br/><br/>Además la domótica sirve de gran ayuda a personas invidentes o con discapacidad y que simplemente con un comando de voz puedan controlar elementos tecnológicos de su casa sin tener que ponerse de pie y activarlos manualmente. <br/><br/> No es solo un tema de modernidad o de lujo, es también una manera de controlar el gasto energético de la casa, de crear versatilidad de los espacios creando escenas personalizadas de acuerdo al gusto del consumidor.</p>
 
