cambios en el header, eliminación del icono login en todas las páginas excepto el index y eliminacion de la seccion marcas

--- a/casaConectada/index.html
+++ b/casaConectada/index.html
@@ -37,7 +37,7 @@
         <!-- Se usa un contenedor para centrar la página -->
         <a href="#"><div class="secciones">
           <div class="container">
-          <a href="./web/laTienda.html"><div class="sec">La tienda</div></a></a><a href="./web/seccionProductos.html"><div class="sec">Productos</div></a><a href="./web/marcas.html"><div class="sec">Marcas</div></a><a href="./web/servicios.html"><div class="sec">Servicios</div></a><div style="clear: both;"></div></div>
+          <a href="./web/laTienda.html"><div class="sec">La tienda</div></a></a><a href="./web/seccionProductos.html"><div class="sec">Productos</div></a><a href="./web/servicios.html"><div class="sec">Servicios</div></a><div style="clear: both;"></div></div>
         </div>
       </nav>
     </header>
