--- a/casaConectada/web/carrito.html
+++ b/casaConectada/web/carrito.html
@@ -23,30 +23,28 @@
               <a href="../index.html"><img src="../img/logoTexto.png" alt="Casa Conectada" height="25px" class="casa"></a>
               <div class="login">
                 <!-- Aqui se inserta el badge de bootstrap para que avise de los productos que estan metidos en el carrito con el localStorage -->
-                <a class="position-relative d-inline-block mx-4" href="./carrito.html">
+                <a class="position-relative d-inline-block me-0" href="./carrito.html">
                 <img src="../img/icons/shopping-cart.png" alt="carrito" height="15px" title="Carrito">
                 <span id="badge" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
                 <span class="visually-hidden">Productos en el carrito</span> 
                 </span>
                 </a>
-                <a href="./web/login.html"><img src="../img/icons/padlock.png" alt="login" height="15px" title="Login"></a>
               </div>
               </div>
             </div>
             <nav>
                 <a href="#"><div class="secciones">
                   <div class="container">
-                  <a href="./laTienda.html"><div class="sec">La tienda</div></a></a><a href="./seccionProductos.html"><div class="sec">Productos</div></a><a href="./marcas.html"><div class="sec">Marcas</div></a><a href="./servicios.html"><div class="sec">Servicios</div></a><div style="clear: both;"></div></div>
+                  <a href="./laTienda.html"><div class="sec">La tienda</div></a></a><a href="./seccionProductos.html"><div class="sec">Productos</div></a><a href="./servicios.html"><div class="sec">Servicios</div></a><div style="clear: both;"></div></div>
                 </div>
               </nav>
           </header>
         <main>
             <div id="compra">
                 
-                
-                 <div class="container ">
+                 <div class="container bg-light mt-3 py-3 px-3">
                   <div class="row"><h2>Carrito de compra</h2></div> 
-                  <div class="row">   
+                  <div class="row">
                     <table class="table-responsive tablaCarrito table table-hover table-striped table-bordered border-secondary">
                       <thead><th>Foto</th><th>Nombre</th><th>Cantidad</th><th>Precio</th><th>Subtotal</th></thead>
                       <tbody></tbody>
