--- a/casaConectada/web/checkout.html
+++ b/casaConectada/web/checkout.html
@@ -29,18 +29,17 @@
                   <span class="visually-hidden">Productos en el carrito</span> 
                   </span>
                   </a>
-                  <a href="./login.html"><img src="../img/icons/padlock.png" alt="login" height="15px" title="Login"></a>
               </div>
               </div>
             </div>
             <nav>
                 <a href="#"><div class="secciones">
                   <div class="container">
-                  <a href="./laTienda.html"><div class="sec">La tienda</div></a></a><a href="./seccionProductos.html"><div class="sec">Productos</div></a><a href="./marcas.html"><div class="sec">Marcas</div></a><a href="./servicios.html"><div class="sec">Servicios</div></a><div style="clear: both;"></div></div>
+                  <a href="./laTienda.html"><div class="sec">La tienda</div></a></a><a href="./seccionProductos.html"><div class="sec">Productos</div></a><a href="./servicios.html"><div class="sec">Servicios</div></a><div style="clear: both;"></div></div>
                 </div>
               </nav>
           </header>
-        <div class="container">
+        <div class="container bg-light mt-3 py-3 px-3">
           <main>
           <div class="row">
             <div class="col-md-5 col-lg-4 order-md-last">
@@ -165,7 +164,7 @@
                   </div>
                 <hr class="my-4">
       
-                <button class="w-100 btn btn-primary btn-lg" type="submit">Continue para finalizar el pedido</button>
+                <button class="w-100 btn btn-primary btn-lg" type="submit">Continúe para finalizar el pedido</button>
                 
                 <div id="myModal" class="modal" tabindex="-1">
                   <div class="modal-dialog">
