--- a/casaConectada/web/marcas.html
+++ b/casaConectada/web/marcas.html
@@ -17,18 +17,17 @@
     
     <header>
       <div class="logo">
-        <div class="container-fluid">
+        <div class="container">
         <a href="../index.html"><img src="../img/logoimagen.png" class="logo" height="50px"></a>
         <a href="../index.html"><img src="../img/logoTexto.png" alt="Casa Conectada" height="25px" class="casa"></a>
         <div class="login">
           <!-- Aqui se inserta el badge de bootstrap para que avise de los productos que estan metidos en el carrito con el localStorage -->
-          <a class="position-relative d-inline-block mx-4" href="./carrito.html">
+          <a class="position-relative d-inline-block me-0" href="./carrito.html">
             <img src="../img/icons/shopping-cart.png" alt="carrito" height="15px" title="Carrito">
               <span id="badge" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
                 <span class="visually-hidden">Productos en el carrito</span> 
               </span>
           </a>
-          <a href="./login.html"><img src="../img/icons/padlock.png" alt="login" height="15px" title="Login"></a>
         </div>
         </div>
       </div>
@@ -41,7 +40,7 @@
     </header>
     
     <main>
-        <div id="laTienda">
+        <div id="laTienda" class="container bg-light mt-3 py-3 px-3">
           <h1>Marcas</h1>
           <ul>
             <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
