--- a/casaConectada/index.html
+++ b/casaConectada/index.html
@@ -4,7 +4,8 @@
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Casa Conectada Domotica</title>  
+      <title>Casa Conectada Domotica</title>
+      <link rel="icon" type="image/x-icon" href="./img/miniLogo.PNG">  
       <script src="./scripts/jquery-3.6.0.js"></script>
       <script src="./scripts/bootstrap.bundle.min.js"></script>
       <link rel="stylesheet" href="./css/bootstrap.min.css">
